fixed news card hr to border and 1px gap in footer border.

--- a/scss/_culture.scss
+++ b/scss/_culture.scss
@@ -72,9 +72,6 @@
 @media (min-width: 1260px) {
     #culture {
         background-size: auto 100%;
-        p {
-            font-size: 1rem;
-        }
     }
     .width {
         width: 1200px;
