--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -81,11 +81,15 @@
         hr {
             border:1px solid #ccc;
         }
+        .bottom {
+            border-bottom: 1px solid #ccc; 
+        }
     }
     .card-footer {
         border: 1px solid lightgrey;
         border-top: 0;
-        border-radius: 3px;
+        margin-top: -3px;
+        border-radius: 0 0 3px 3px;
         padding: 10px 30px 30px;
         width: 100%;
         img {
@@ -214,9 +218,6 @@
     }
 }
 @media (min-width: 992px) {
-    .latest h3 {
-        font-size: 0.965rem;
-    } 
     #news {
         width: 970px;
 
@@ -238,9 +239,6 @@
     }
 }
 @media (min-width: 1260px) {
-    .latest h3 {
-        font-size: 1rem;
-    } 
     #news {
         width: 1200px;
         .card {
